[gd_scene load_steps=2 format=3 uid="uid://debug_overlay_001"]

[ext_resource type="Script" path="res://coop/scripts/debug_overlay.gd" id="1"]

[node name="DebugOverlay" type="CanvasLayer"]
layer = 100
script = ExtResource("1")

[node name="DebugPanel" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -420.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 500.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="DebugPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="DebugLabel" type="RichTextLabel" parent="DebugPanel/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[b]Debug Overlay Loading...[/b]"
fit_content = true
scroll_active = false
